--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 		"php-activerecord/php-activerecord": "dev-master",
 		"pagseguro/php": "2.2.1",
 		"phpmailer/phpmailer": "v5.2.7",
+		"twitter/bootstrap": "dev-templated-customizer",
 		"twitter/bootstrap": "v3.1.1"
 	}
 }
